<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<!--Application Strings-->
	<string name="app_name">Shopping List App</string>

	<!--Titles-->

	<!--ActionBar Titles-->
	<string name="title_activity_add_item">Add Item</string>
	<string name="title_activity_edit_item">Edit Item</string>
	<string name ="title_activity_item_listing">Items</string>
	<string name ="title_share_dialog">Share <xliff:g id="itemName">%s</xliff:g></string>
	<!--Dialog Titles-->
	<string name="title_dialog_edit_category">Edit Category Name</string>

	<!--Actions-->
	<string name="action_settings">Settings</string>
	<string name="action_add">Add</string>
	<string name="action_done">Done</string>
	<string name="action_cancel">Cancel</string>
	<string name="action_edit">Edit</string>
	<string name="action_share">Share</string>
	<string name="action_delete">Delete</string>

	<!--Sync Adapter-->
	<string name="sync_account_type">shoppinglistapp.tomogoma.com</string>
	<string name="content_authority">com.tomogoma.shoppinglistapp</string>

	<!--Strings for views-->
	<string name="item_name_hint">item name</string>
	<string name="item_name_hint_detail">item name e.g. Toothpaste, Bar-soap…</string>
	<string name="item_category_hint">item category</string>
	<string name="category_name_hint">new category name</string>
	<string name="item_category_hint_detail">item category e.g. Foodstuff, Bathroom…</string>
	<string name="brand_hint">brand</string>
	<string name="brand_hint_detail">brand e.g. Colgate, Aquafresh…</string>
	<string name="brand_version_hint">branded version</string>
	<string name="brand_version_hint_detail">branded version e.g. (for Colgate) Max Spicy, Classic…</string>
	<string name="meas_unit_hint">measurement unit</string>
	<string name="meas_unit_hint_detail">factory measurement unit e.g. Kg, Gram, packet… (use singular)</string>
	<string name="price_hint">unit price</string>
	<string name="price_hint_detail">unit price e.g. if 1<xliff:g id="measUnit">%s</xliff:g> cost 200, enter 200</string>
	<string name="quantity_hint">quantity to purchase</string>
	<string name="quantity_hint_detail">quantity to purchase e.g. if to purchase 2<xliff:g id="measUnit">%s</xliff:g>, enter 2</string>
	<string name="useful_unit_hint">usefulness measurement unit</string>
    <string name="useful_unit_hint_detail">
		useful unit. Can be Roll, Week… (Use singular) e.g. if 1<xliff:g id="measUnit">%s</xliff:g> lasts 2Months, enter Month
	</string>
	<string name="useful_per_actual_hint">...</string>
	<string name="useful_per_actual_hint_detail">
		How long it lasts (estimate) e.g. if 1<xliff:g id="measUnit">%s</xliff:g> lasts 2<xliff:g id="lastsUnit">%s</xliff:g>, enter 2
	</string>
	<string name="description_hint">description</string>
	<string name="description_hint_detail">description</string>
	<string name="more_text">more...</string>
	<string name="opening_parenthesis">(</string>
	<string name="closing_parenthesis">)</string>
	<string name="lasts_day_text">Days</string>
	<string name="lasts_week_text">Weeks</string>
	<string name="lasts_month_text">Months</string>
	<string name="lasts_year_text">Years</string>
	<!--Placeholder text for an empty list-->
	<string name="advice_empty_list">No items yet, click on the \"Add\" action to add more</string>

	<!--Error Messages-->
	<!--Used in toasts and input views-->
	<string name="error_already_exists">
		<xliff:g id="itemName">%s</xliff:g> already exists
	</string>

	<!--Input View error messages-->
	<string name="error_inputViewErr_missing_item">Probably forgot the item\'s name?</string>
	<string name="error_inputViewErr_missing_category">Nice to have categories, isn\'t it?</string>
	<string name="error_inputViewErr_is_empty">Cannot be empty</string>

	<!--Error Toast Messages-->
	<string name="error_toast_http_fetch_currencies">
		Unable to get currencies list due to connectivity problems
	</string>
	<string name="error_toast_fetch_currencies">
		Unable to get currencies list due to unexpected problems
	</string>
	<string name="error_toast_fetch_preferred_currency_fail">
		Failed to load preferred currency, falling back to default
	</string>
	<string name="error_toast_loading_data">
		An error occurred loading data, please try again
	</string>
	<string name="error_toast_db_delete_fail">
		failed to delete the item, please try again
	</string>
	<string name="error_toast_db_multi_delete_fail">
		failed to delete the items, please try again
	</string>
	<string name="error_toast_db_update_fail">
		failed to update the item: <xliff:g id="itemName">%s</xliff:g>, please try again
	</string>
	<string name="error_toast_missing_item_name">
		Missing the item name
	</string>
	<string name="error_toast_missing_item_or_category">
		Missing the item name or category name; must enter at least one
	</string>
	<string name="error_toast_db_potential_data_corruption">
		Whoa! I may have screwed up, please check that your data is okay
	</string>
	<string name="error_toast_multi_delete_not_executed">
		Whoops, looks like something went wrong parsing your selection, please try again
	</string>

	<!--Informative Toast Messages-->
	<string name="toast_successful_delete">Successfully deleted <xliff:g id="itemName">%s</xliff:g></string>
	<string name="toast_category_created">Category:  <xliff:g id="categoryName">%s</xliff:g>  is now in place</string>
	<!--toast_item_created/toast_item_updated and toast_but_placed go together; but placed can be an empty string though-->
	<string name="toast_item_created">
		<xliff:g id="itemName">%s</xliff:g> successfully created
		<xliff:g id="butPlaced">%s</xliff:g> in the
		<xliff:g id="categoryName">%s</xliff:g> category
	</string>
	<string name="toast_item_updated">
		<xliff:g id="itemName">%s</xliff:g> successfully updated
		<xliff:g id="butPlaced">%s</xliff:g> in the
		<xliff:g id="categoryName">%s</xliff:g> category
	</string>
	<string name="toast_category_updated">
		<xliff:g id="itemName">%s</xliff:g> successfully updated
	</string>
	<string name="toast_but_placed"> but placed</string>
</resources>
