<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/itemCategoryHint"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:hint="@string/item_category_hint_detail"
			android:singleLine="true"
			android:visibility="gone"/>

		<AutoCompleteTextView
			android:id="@+id/itemCategory"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/itemCategoryHint"
			android:layout_margin="@dimen/view_margin_small"
			android:hint="@string/item_category_hint"
			android:inputType="text|textCapWords"
			android:singleLine="true"/>

		<TextView
			android:id="@+id/itemNameHint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/itemCategory"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:labelFor="@+id/itemName"
			android:text="@string/item_name_hint_detail"
			android:visibility="gone"/>

		<EditText
			android:id="@+id/itemName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/itemNameHint"
			android:layout_margin="@dimen/view_margin_small"
			android:hint="@string/item_name_hint"
			android:inputType="text|textCapWords"
			android:singleLine="true"/>

		<TextView
			android:id="@+id/unitPriceHint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/itemName"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:labelFor="@+id/unitPrice"
			android:text="@string/price_hint_detail"
			android:visibility="gone"/>

		<EditText
			android:id="@+id/unitPrice"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/unitPriceHint"
			android:layout_margin="@dimen/view_margin_small"
			android:hint="@string/price_hint"
			android:inputType="numberDecimal"
			android:singleLine="true"/>

		<TextView
			android:id="@+id/quantityHint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/unitPrice"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:labelFor="@+id/quantityLayout"
			android:text="@string/quantity_hint_detail"
			android:visibility="gone"/>

		<EditText
			android:id="@+id/quantityLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/quantityHint"
			android:layout_margin="@dimen/view_margin_small"
			android:hint="@string/quantity_hint"
			android:inputType="number|numberDecimal"
			android:singleLine="true"/>

		<TextView
			android:id="@+id/separater"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/quantityLayout"
			android:width="0dp"
			android:padding="@dimen/view_margin_small"
			android:text="@string/more_text"/>

		<TextView
			android:id="@+id/brandHint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/separater"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:labelFor="@+id/brand"
			android:text="@string/brand_hint_detail"
			android:visibility="gone"/>

		<com.tomogoma.shoppinglistapp.EditTextWithKeyBoardBackEvent
			android:id="@+id/brand"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/brandHint"
			android:layout_margin="@dimen/view_margin_small"
			android:hint="@string/brand_hint"
			android:inputType="text|textCapWords"
			android:singleLine="true"/>

		<TextView
			android:id="@+id/versionHint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/brand"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:labelFor="@+id/version"
			android:text="@string/brand_version_hint_detail"
			android:visibility="gone"/>

		<EditText
			android:id="@+id/version"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/versionHint"
			android:layout_margin="@dimen/view_margin_small"
			android:enabled="false"
			android:focusable="false"
			android:hint="@string/brand_version_hint"
			android:inputType="text|textCapWords"
			android:singleLine="true"
			android:visibility="visible"/>

		<TextView
			android:id="@+id/measUnitHint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/version"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:labelFor="@+id/measUnit"
			android:text="@string/meas_unit_hint_detail"
			android:visibility="gone"/>

		<com.tomogoma.shoppinglistapp.EditTextWithKeyBoardBackEvent
			android:id="@+id/measUnit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/measUnitHint"
			android:layout_margin="@dimen/view_margin_small"
			android:hint="@string/meas_unit_hint"
			android:inputType="text|textCapWords"
			android:singleLine="true"/>

		<TextView
			android:id="@+id/usefulUnitHint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/measUnit"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:labelFor="@+id/usefulUnit"
			android:text="@string/useful_unit_hint_detail"
			android:visibility="gone"/>

		<com.tomogoma.shoppinglistapp.EditTextWithKeyBoardBackEvent
			android:id="@+id/usefulUnit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/usefulUnitHint"
			android:layout_margin="@dimen/view_margin_small"
			android:enabled="false"
			android:focusable="false"
			android:hint="@string/useful_unit_hint"
			android:inputType="text|textCapWords"
			android:singleLine="true"
			android:visibility="visible"/>

		<TextView
			android:id="@+id/usefulPerActualHint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/usefulUnit"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:labelFor="@+id/usefulPerActual"
			android:text="@string/useful_per_actual_hint_detail"
			android:visibility="gone"/>

		<EditText
			android:id="@+id/usefulPerActual"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/usefulPerActualHint"
			android:layout_margin="@dimen/view_margin_small"
			android:enabled="false"
			android:focusable="false"
			android:hint="@string/useful_per_actual_hint"
			android:inputType="number|numberDecimal"
			android:singleLine="true"
			android:visibility="visible"/>

		<TextView
			android:id="@+id/descriptionHint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/usefulPerActual"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="@dimen/view_margin_small"
			android:layout_marginRight="@dimen/view_margin_small"
			android:layout_marginTop="@dimen/view_margin_small"
			android:labelFor="@+id/description"
			android:text="@string/description_hint_detail"
			android:visibility="gone"/>

		<EditText
			android:id="@+id/description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/descriptionHint"
			android:layout_margin="@dimen/view_margin_small"
			android:hint="@string/description_hint"
			android:inputType="text|textMultiLine|textCapSentences"/>
	</RelativeLayout>
</ScrollView>
