<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="@dimen/view_margin_medium">

	<EditText
		android:id="@+id/categoryName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/view_margin_small"
		android:hint="@string/category_name_hint"/>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/actionCancel"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/action_cancel"/>

	<Button
		android:id="@+id/actionDone"
		android:layout_weight="1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/action_done"/>

	</LinearLayout>

</LinearLayout>